<resources>
    <string name="app_name">马道货主</string>
    <string name="login_phone_edit">请输入手机号码</string>
    <string name="login_phone_request">获取验证码</string>

    <string name="fragment_name0" >找货</string>
    <string name="fragment_name2">找车</string>
    <string name="fragment_name3">发货</string>
    <string name="fragment_name4">运单</string>
    <string name="fragment_name5">我的</string>
</resources>
